Fix headshot on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -287,8 +287,8 @@ nav ul li {
 }
 
 .socicon {
-  width: 2rem;
-  height: 2rem;
+  width: 4rem;
+  height: 4rem;
 }
 
 footer {
@@ -347,7 +347,7 @@ footer {
   }
 
   .hero img {
-    height: 32rem;
+    height: 30rem;
     width: 30rem;
   }
 
@@ -389,7 +389,7 @@ footer {
 
 @media screen and (max-width: 420px) {
   .hero img {
-    height: 37.5rem;
+    height: 30rem;
     width: 23rem;
   }
 
